namespace Opcion1LosBorbotones.Domain.Entity;

public interface IEntity
{
    public Guid Id { get; set; }
    
}
